--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "form-data": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
-    "react-native": "0.65.1",
+    "react-native": "0.65.2",
     "react-native-web": "^0.17.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^0.2.4"
